<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="473dp"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:background="@color/black"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:autofillHints=""
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingBottom="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="109dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="109dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>